<?xml version="1.0"?>
<package format="2">
  <name>offboard_state_machine</name>
  <version>0.0.1</version>
  <description>Multi-drone PX4 offboard finite-state machine for ROS1 with MAVROS</description>

  <maintainer email="user@todo.todo">User</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>eigen</depend>

  <export>
  </export>
</package>

